# K-gent

./: README.md
backend/: context.py  deploy.py  pyproject.toml  server.py
backend/data/: facts.json  summary.txt
frontend/: package-lock.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: twin.tsx
memory/: 12eb698d-e6c1-4b5a-979c-9ac18ad577f2.json  89db0276-735d-42ae-9eb6-0da40b70390e.json  c00a8a1d-5910-4815-bc0c-34d8536bda07.json
scripts/: deploy.sh  destroy.sh
terraform/: backend-setup.tf  github-oidc.tf  terraform.tfvars
