[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.87",
    "fastapi>=0.115.13",
    "mangum>=0.21.0",
    "openai>=1.91.0",
    "pypdf>=5.6.1",
    "python-dotenv>=1.1.1",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.3",
]
